# pika

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-tw.md  README_zh-tw.md  docker-compose.yaml  pyproject.toml  setup.sh
.github/workflows/: create_release.yaml
backend/: .env.example  app.py  cred.py  init.py  pyproject.toml  record.py  requirements.txt  schemas.py
docker/nginx/: default.conf
frontend/: check_privilege.js  conf.yaml.example  hostname.js  index.html  index.js  package-lock.json  package.json  response.js
frontend/admin/: admin.js  index.html
frontend/change_pass/: change_pass.js  index.html
frontend/login/: index.html  login.js
frontend/logout/: index.html  logout.js
frontend/src/: App.jsx  api.js  main.jsx  theme.jsx
frontend/src/components/: ExpirySelector.jsx  Layout.jsx  PasswordInput.jsx  Toast.jsx
frontend/src/pages/: Admin.jsx  ChangePassword.jsx  Home.jsx  Login.jsx  Logout.jsx  Redirect.jsx
frontend/src/styles/: global.css
frontend/styles/: style.css
icon/v2/: Pika-full-logo-no-background.ai  Pika-full-logo.ai  Pika-square-logo.ai
python-backend/: init.py  pyproject.toml  record.py
web-frontend/: index.html
