[project]
name = "simple-url-shortener"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.21",
    "unicorn>=2.1.4",
    "uvicorn>=0.40.0",
]
